added van der Molen

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.10 2010-02-11 19:08:46 kb Exp $
+%$Id: gotm_pub.bib,v 1.11 2010-02-12 11:42:30 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -37,6 +37,18 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+
+@article{vandermolenetal_2009,
+   author   = {Johan van der Molen and Karsten Bolding and Naomi Greenwood 
+               and David K. Mills},
+   title    = {A multiple grain-size model of suspended particulate matter
+               in combined currents and waves in shelf seas},
+   journal  = JGR,
+   volume   = {114},
+   pages    = {F01030, doi:10.1029/2008JF001150},
+   year     = {2008},
+   note     = {},
+}
 
 @article{kuznetzovetal_2008,
    author   = {Ivan Kuznetzov and Thomas Neumann and Hans Burchard},
