added Ye et all.

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.11 2010-02-12 11:42:30 kb Exp $
+%$Id: gotm_pub.bib,v 1.12 2010-02-12 13:31:32 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -37,6 +37,18 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{yeetal_2009,
+   author = {Ye, Y. and Volker, C. and Wolf-Gladrow, D. A.},
+   title = {A model of {F}e speciation and biogeochemistry at the {T}ropical
+            {E}astern {N}orth {A}tlantic {T}ime-{S}eries {O}bservatory site},
+   journal = BGS,
+   volume = {6},
+   year = {2009},
+   number = {10},
+   pages = {2041--2061},
+   url = {http://www.biogeosciences.net/6/2041/2009/},
+   issn = {1726-4170},
+}
 
 @article{vandermolenetal_2009,
    author   = {Johan van der Molen and Karsten Bolding and Naomi Greenwood 
