added van der Molen 2009

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.12 2010-02-12 13:31:32 kb Exp $
+%$Id: gotm_pub.bib,v 1.13 2010-04-26 13:00:48 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -7,6 +7,7 @@
 %@String{IJNMF = "Int. J. Numer. Meth. Fluids"}
 %@String{MWR = "Monthly Weather Review"}
 %@String{Franzius = "Mitteilungen des Franzius-Institutes"}
+%@STRING{JGR = "Journal of Geophysical Research"}
 %@String{ECSS = "Estuarine, Coastal and Shelf Science"}
 %@String{OD = "Ocean Dynamics"}
 %@STRING{UNESCO = "Unesco technical papers in marine sciences"}
@@ -36,6 +37,17 @@
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+@article(vanderdermoelenetal_2009,
+  author = "Johan van der Molen and Karsten Bolding and Naomi Greenword and 
+            David Kevin Mills",
+    title = "A 1-D vertical multiple grain size model of suspended particulate 
+             matter in combined currents and waves in shelf seas",
+    journal = JGR,
+    year = "2009",
+    volume = "114",
+    pages = "F01030, doi:10.1029/2008JF001150")
+}
 
 @article{yeetal_2009,
    author = {Ye, Y. and Volker, C. and Wolf-Gladrow, D. A.},
