Miladinova et Stips  2010

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm_pub.bib,v 1.13 2010-04-26 13:00:48 kb Exp $
+%$Id: gotm_pub.bib,v 1.14 2010-04-26 13:04:50 kb Exp $
 %
 
 %@String{OMOD = "Ocean Modelling"}
@@ -10,6 +10,7 @@
 %@STRING{JGR = "Journal of Geophysical Research"}
 %@String{ECSS = "Estuarine, Coastal and Shelf Science"}
 %@String{OD = "Ocean Dynamics"}
+%@String{OS = "Ocean Science"}
 %@STRING{UNESCO = "Unesco technical papers in marine sciences"}
 %@String{EFM = "Environmental Fluid Mechanics"}
 %@String{SR = "Journal of Sea Research"}
@@ -38,15 +39,29 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{miladinova_et_stips_2010,
+   author = {Miladinova, S. and Stips, A.},
+   title = {Sensitivity of oxygen dynamics in the water column of the Baltic
+            Sea to external forcing},
+   journal = OS,
+   volume = {6},
+   year = {2010},
+   number = {2},
+   pages = {461--474},
+   url = {http://www.ocean-sci.net/6/461/2010/},
+   issn = {1812-0784}
+}
+
+
 @article(vanderdermoelenetal_2009,
-  author = "Johan van der Molen and Karsten Bolding and Naomi Greenword and 
-            David Kevin Mills",
-    title = "A 1-D vertical multiple grain size model of suspended particulate 
-             matter in combined currents and waves in shelf seas",
-    journal = JGR,
-    year = "2009",
-    volume = "114",
-    pages = "F01030, doi:10.1029/2008JF001150")
+   author = "Johan van der Molen and Karsten Bolding and Naomi Greenword and 
+             David Kevin Mills",
+   title = "A 1-D vertical multiple grain size model of suspended particulate 
+            matter in combined currents and waves in shelf seas",
+   journal = JGR,
+   year = "2009",
+   volume = "114",
+   pages = "F01030, doi:10.1029/2008JF001150")
 }
 
 @article{yeetal_2009,
