Documentation of surface_fluxes_iow in bio_iow.F90 corrected

--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1,5 +1,5 @@
 %
-%$Id: gotm.bib,v 1.11 2008-07-08 10:19:56 lars Exp $
+%$Id: gotm.bib,v 1.12 2011-03-29 14:25:34 hb Exp $
 %
 
 @String{OMOD = "Ocean Modelling"}
@@ -343,13 +343,12 @@
                Ben Sommeijer},
    title    = {A second-order, unconditionally stable, mass-conserving
                integration scheme for biochemical systems},
-   journal  = ANM,
-   volume   = {},
-   pages    = {},
-   year     = {2005},
-   note     = sub,
+   journal  = {Appl. Num. Math},
+   volume   = {57},
+   pages    = {36-58},
+   year     = {2006},
+   note     = {},
 }
-
 
 @article(Buehrer75,
   author = "H. B{\"u}hrer and A. H. Amb{\"u}hl",
@@ -395,13 +394,15 @@ $k$-$\epsilon$ turbulence closure",
 
 @article{Burchardetal2003,
    author   = {Hans Burchard and Karsten Bolding and Manuel Ruiz Villarreal},
-   title    = {Three-dimensional modelling of estuarine turbidity maxima in a tidal estuary},
+   title    = {Three-dimensional modelling of estuarine turbidity maxima
+               in a tidal estuary},
    journal  = OD,
-   volume   = {},
-   pages    = {},
-   year     = {2003},
-   note     = sub,
+   volume   = {54},
+   pages    = {250-265},
+   year     = {2004},
+   note     = {},
 }
+
 
 @misc{BurchardBolding2000,
    author   = {Hans Burchard and Karsten Bolding},
@@ -2351,6 +2352,17 @@ temperate dimictic lake",
   pages = "1633--1639",
   year = "1985"    )
 
+@inproceedings(LissMerlivat86,
+  author = "Liss, P. and Merlivat, L.",
+  title = "Air-sea gas exchange rates: Introduction and synthesis",
+  booktitle = "The role of sea-air exchange in geochemical cycling",
+  editor = "D. Buat-Menard",
+  publisher = "Reidel",
+  address = "Dordrecht",
+  pages = "113-127",
+  year = "1986"    )
+
+
 @article(Liuetal79,
   author = "W. T. Liu and K. B. Katsaros and J. A. Businger",
   title = "Bulk parameterization of the air-sea exchange of heat and
@@ -3128,7 +3140,7 @@ simulated and observed vertical distributions",
 
 @article(Robarts78,
   author = "R.~D. Robarts and P.~R.~B. Ward",
-  title = "Vertical diffusion and nutrients transport in a tropical lake ({L}ake {Mc}{I}llwaine, {R}hodesia",
+  title = "Vertical diffusion and nutrients transport in a tropical lake ({L}ake {Mc}{I}llwaine, {R}hodesia)",
   journal = "Hydrobiologia",
   volume = "59",
   pages = "213--221",
@@ -3651,6 +3663,17 @@ in dissolved oxygen",
   volume = "97",
   pages = "99--110",
   year = "1997"  )
+
+@article{Stigebrandt1991,
+   author   = {Anders Stigebrandt},
+   title    = {Computations of oxygen fluxes through the sea surface and the net production of organic matter with application to the {B}altic and adjacent 
+ {S}eas},
+   journal  = {Limnol. Oceanogr.},
+   volume   = {36},
+   pages    = {444-454},
+   year     = {1991},
+   note     = {},
+}
 
 @article{Stipsetal2002,
    author   = {Adolf Stips and Hans Burchard and Karsten Bolding and
