Fixed wrong Rippeth citation - Zheng

--- a/doc/cases.tex
+++ b/doc/cases.tex
@@ -620,7 +620,7 @@ shear probes from several ships\\
 \subsubsection{Liverpool Bay}\label{liverpool_bay}
 
 The observations for this scenario
-have been carried out by \cite{Rippethetal2001} 
+have been carried out by \cite{Rippethetal2001A} 
 in the Liverpool Bay ROFI \index{region of  
 freshwater inflow} on July 5 and 6, 1999 at a position
 of 53$^{\circ}$28.4'N, 3$^{\circ}$39.2'W.
@@ -636,7 +636,7 @@ vertical velocity structure. Some accompanying CTD casts were made in
 order to achieve estimates for the horizontal gradients of
 temperature and salinity.   
 For further details concerning the observations, see
-\cite{Rippethetal2001}. 
+\cite{Rippethetal2001A}. 
 
 The surface fluxes are based on ship observations and from a
 nearby meteorological station at Hawarden. From the ship,
