added Sonntag and Hense (2011) - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -33,11 +33,24 @@
 @STRING{EM = "Ecological Modelling"}
 @STRING{BGS = "Biogeosciences"}
 @STRING{ECSS = "Estuarine, Coastal and Shelf Science"}
+@String{GRL = "Geophysical Research Letters"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+@article(sonntag_et_hense_2011,
+    author = "S. Sonntag and Inga Hense",
+    title = "Phytoplankton behavior affects ocean mixed layer dynamics
+             through biological-physical feedback mechanisms",
+    journal = GRL,
+    volume = "38",
+    number = "L15610",
+    doi = "doi:10.1029/2011GL048205",
+    year = "2011" )
+}
+
 
 @article{miladinova_et_stips_2010,
    author = {Miladinova, S. and Stips, A.},
