updated DOI - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -74,8 +74,8 @@
    journal = JGR,
    year = "2009",
    volume = "114",
-   pages = "F01030, doi:10.1029/2008JF001150")
-}
+   pages = "F01030",
+   doi = "doi:10.1029/2008JF001150" )
 
 @article{yeetal_2009,
    author = {Ye, Y. and Volker, C. and Wolf-Gladrow, D. A.},
@@ -143,7 +143,8 @@
                freshwater influence: {A}pplication to {L}iverpool {B}ay},
    journal  = JGR,
    volume   = {114},
-   pages    = {11022, doi:10.1029/2009JC005475},
+   pages    = {11022},
+   doi      = {doi:10.1029/2009JC005475},
    year     = {2009},
    note     = {},
 } 
@@ -200,7 +201,8 @@
     journal = JGR,
     year = "2008",
     volume = "113",
-    pages = "C03009, doi:10.1029/2007JC004246")
+    pages = "C03009",
+    doi = "doi:10.1029/2007JC004246")
 
 @article(carnieletal_2007,
   author = "Sandro Carniel and Marcello Vichi and Mauro Sclavo",
@@ -238,7 +240,7 @@
    year =          {2006},
    volume =         {53},
    pages =         {2434-2454},
-   note =         {doi:10.1016/j.dsr2.2006.05.030}
+   doi =         {doi:10.1016/j.dsr2.2006.05.030}
 		     }
 
 @article(ralstonstacey_2004,
