added Somavilla et. al. 2011

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,23 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@article{somavilla_et_al_2011,
+    author = {Somavilla Cabrillo, Raquel and Gonzalez-Pola, Cesar and
+              Ruiz-Villarreal, Manuel and Lavin Montero, Alicia},
+    title = {Mixed layer depth ({MLD}) variability in the southern {B}ay 
+             of {B}iscay. {D}eepening of winter {MLD}s concurrent with 
+             generalized upper water warming trends?},
+    journal = OD,
+    year = {2011},
+    volume = {61},
+    number = {9},
+    pages = {1215-1235},
+    publisher = {SPRINGER HEIDELBERG},
+    type = {Article},
+    doi = {doi:10.1007/s10236-011-0407-6},
+}
+
+
 @article(sonntag_et_hense_2011,
     author = "S. Sonntag and Inga Hense",
     title = "Phytoplankton behavior affects ocean mixed layer dynamics
