added Jenkinson et Sun (2010, 2011) - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,17 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@ARTICLE{jenkinson_et_sun_2011,
+    author = {Jenkinson, I R and Sun, Jun},
+    title = {A model of pycnocline thickness modified by the rheological 
+             properties of phytoplankton exopolymeric substances},
+    journal = {Journal of Plankton Research},
+    year = {2011},
+    volume = {33},
+    pages = {373-383},
+    doi = {doi:10.1093/plankt/fbq099}
+}
+
 @article{somavilla_et_al_2011,
     author = {Somavilla Cabrillo, Raquel and Gonzalez-Pola, Cesar and
               Ruiz-Villarreal, Manuel and Lavin Montero, Alicia},
@@ -66,6 +77,17 @@
     number = "L15610",
     doi = "doi:10.1029/2011GL048205",
     year = "2011" )
+}
+
+@ARTICLE{jenkinson_et_sun_2010,
+    author = {Jenkinson, Ian R and Sun, Jun},
+    title = {Rheological properties of natural waters with regard to plankton 
+             thin layers. {A} short review},
+    journal = JMS,
+    year = {2010},
+    volume = {83},
+    pages = {287-297},
+    doi = {doi:10.1016/j.jmarsys.2010.04.004},
 }
 
 
