added som doi's - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -137,7 +137,7 @@
    volume   = {219},
    pages    = {107--114},
    year     = {2008},
-   note     = {},
+   doi      = {doi:10.1016/j.ecolmodel.2008.08.002},
 }
 
 @article{burchard_hofmeister_2008,
@@ -148,7 +148,7 @@
    volume   = {77},
    pages    = {679--687},
    year     = {2008},
-   note     = {},
+   doi      = {doi:10.1016/j.ecss.2007.10.025}
 }
 
 @article{burchardetal_2008,
@@ -160,7 +160,7 @@
    volume   = {38},
    pages    = {566--587},
    year     = {2008},
-   note     = {},
+   doi      = {doi:10.1175/2007JPO3796.1}
 }
 
 @article{burchard_2009,
@@ -172,7 +172,7 @@
    volume   = {39},
    pages    = {2117--2136},
    year     = {2009},
-   note     = {},
+   doi      = {doi:10.1175/2009JPO4142.1}
 }
 
 @article{verspechtetal_2009,
@@ -205,6 +205,7 @@
    volume   = {221},
    pages    = {238--244},
    year     = {2010},
+   doi      = {doi:10.1016/j.ecolmodel.2009.09.006}
 }
 
 @article(conleyetal_2008,
@@ -347,9 +348,10 @@
    volume   = {55},
    pages    = {391-402},
    year     = {2005},
+   doi      = {doi:10.1007/s10236-005-0025-2}
 }
 
-@article{burchardetal_2004,
+@article{burchardetal_2006,
    author    = {Hans Burchard and Karsten Bolding and Wilfried K\"uhn and
                 Andreas Meister and Thomas Neumann and Lars Umlauf},
    title     = {Description of a flexible and extendable
@@ -358,7 +360,7 @@
    volume   = {61},
    pages    = {180-211},
    year     = {2006},
-   note     = {},
+   doi = {doi:10.1016/j.jmarsys.2005.04.011}
 }
 
 @article{stipsetal_2005,
@@ -370,6 +372,7 @@
    volume    = 52,
    pages     = {1133-1155},
    year      = {2005},
+   doi       = {doi:10.1016/j.dsr2.2005.01.012}
 }
 
 @article{stipsetal_2002,
@@ -381,6 +384,7 @@
    volume    = 52,
    pages     = {153-168},
    year      = {2002},
+   doi       = {doi:10.1007/s10236-002-0019-2}
 }
 
 @article{burchardetal_2002,
@@ -393,6 +397,8 @@
    volume    = 47,
    pages     = {223-238},
    year      = {2002},
+   doi       = {doi:10.1016/S1385-1101(02)00126-0}
+
 }
 
 @article{burchardbolding_2000,
@@ -401,6 +407,7 @@
                 for the oceanic mixed layer.},
    journal   = JPO,
    year      = {2000},
+   doi       = {doi:10.1175/1520-0485(2001)031%3C1943:CAOFSM%3E2.0.CO;2}
 }
 
 @article{burchardetal_1998,
@@ -420,7 +427,10 @@
   journal = OM,
   volume = "5",
   pages = "195-218",
-  year = "2003"    )
+  year = "2003",
+  doi = {doi:10.1016/S1463-5003(02)00039-2}
+
+)
 
 @article(umlaufburchard_2003,
   author = "L. Umlauf and H. Burchard",
@@ -428,7 +438,10 @@
   journal =JMR,
   volume = "61",
   pages = "235--265",
-  year = "2003"    )
+  year = "2003",
+  doi = {doi:10.1357/002224003322005087}
+
+)
 
 @article(umlaufburchard_2005,
   author = "L. Umlauf and H. Burchard",
@@ -437,7 +450,9 @@
   journal =CSR,
   volume = "25",
   pages = "795--827",
-  year = "2005" )
+  year = "2005",
+  doi = {doi:10.1016/j.csr.2004.08.004}
+)
 
 @article(umlauf_2005,
   author = "Lars Umlauf",
@@ -455,7 +470,10 @@
   journal =JPO,
   year = "2007",
   volume = "37",
-  pages = "2094--2113")
+  pages = "2094--2113",
+  doi = {doi:10.1175/JPO3110.1}
+
+)
 
 
 
