corrected bruggemannkooijman_2007 - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -254,12 +254,14 @@
     pages = "157--175")
 
 @article(bruggemannkooijman_2007,
-  author = "J. Bruggemann and A. L. M. Kooijman",
-  title = "A biodiversity-inspire approach to aquatic ecosystem modeling.",
+  author = "J. Bruggeman and S. A. L. M. Kooijman",
+  title = "A biodiversity-inspired approach to aquatic ecosystem modeling.",
   journal = LO,
   year = "2007",
   volume = "52(4)",
-  pages = "1533--1544")
+  pages = "1533--1544",
+  doi = "doi:10.4319/lo.2007.52.4.1533",
+)
 
 @article(maaretall_2007,
   author = "Marie Maar and Torkel Gissel Nielsen and Karsten Bolding and
