added omta_et_al_2009 - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,19 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@ARTICLE{omta_et_al_2009,
+    author  = {Anne Willem Omta and Jorn Bruggeman and S. A. L. M. Kooijman and 
+               Henk Dijkstra},
+    title   = {The organic carbon pump in the {A}tlantic},
+    journal = {Journal of Sea Research}, 
+    volume  = {62}, 
+    issue   = {2-3}, 
+    year    = {2009},
+    pages   =  {179--187}, 
+    doi     = "doi:10.1016/j.seares.2009.06.005",
+}
+
+
 @ARTICLE{jenkinson_et_sun_2011,
     author = {Jenkinson, I R and Sun, Jun},
     title = {A model of pycnocline thickness modified by the rheological 
