--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -222,21 +222,25 @@
 }
 
 @article(conleyetal_2008,
-  author = "D.C. Conley and S. Falchetti and I.P. Lohmann and M. Brocchini",
+    author = "D.C. Conley and S. Falchetti and I.P. Lohmann and M. Brocchini",
     title = "The effects of flow stratification by non-cohesive sediment 
              on transport in high-energy wave-driven flows",
     journal = JFM,
     year = "2008",
     volume = "610",
-    pages = "43--67")
+    pages = "43--67",
+    doi      = {doi:10.1017/S0022112008002565}
+)
 
 @article(falchettietal_2010,
-  author = "S. Falchetti and D.C. Conley and M. Brocchini and S. Elgar",
+    author = "S. Falchetti and D.C. Conley and M. Brocchini and S. Elgar",
     title = "Nearshore bar migration and sediment induced buoyancy effects",
     journal = CSR,
     year = "2010",
     volume = "30",
-    pages = "226--238")
+    pages = "226--238",
+    doi      = {doi:10.1016/j.csr.2009.11.005}
+)
 
 @article(jones_monismith_2008a,
   author = "Nicole L. Jones and Stephen G. Monismith",
