added van der Molen et al. - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,15 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@ARTICLE{vandermolen_et_al_2012,
+    author  = {Johan vand der Molen and John N. Aldridge and Clare Coughlan and 
+               E. R. Parker and D. Stephens and Piet Ruardij},
+    title   = {Modelling marine ecosystem response to climate change and trawling in the {N}orth {S}ea},
+    journal = {Biogeochemistry}, 
+    year    = {2012},
+    doi     = "doi:10.1007/s10533-012-9763-7",
+}
+
 @ARTICLE{omta_et_al_2009,
     author  = {Anne Willem Omta and Jorn Bruggeman and S. A. L. M. Kooijman and 
                Henk Dijkstra},
