fixed typo - gotm_pub.bib

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -41,7 +41,7 @@
 @String{inp = "In Press"}
 
 @ARTICLE{vandermolen_et_al_2012,
-    author  = {Johan vand der Molen and John N. Aldridge and Clare Coughlan and 
+    author  = {Johan van der Molen and John N. Aldridge and Clare Coughlan and 
                E. R. Parker and D. Stephens and Piet Ruardij},
     title   = {Modelling marine ecosystem response to climate change and trawling in the {N}orth {S}ea},
     journal = {Biogeochemistry}, 
