changed mailing-list info: @gotm.net --> @googlegroups.com

--- a/doc/introduction.tex
+++ b/doc/introduction.tex
@@ -136,10 +136,10 @@ This documentation does not contain information about how to download,
 compile and run the code and the test cases. All information necessary
 to run GOTM on a number of well-known platforms is compiled at {\tt
 www.gotm.net}. If you wish to directly contact to the GOTM developers,
-please write an e-mail to {\tt gotm-devel@gotm.net}. All users of GOTM,
-who signed up on the GOTM web page, will be on the users' mailing
-list, {\tt gotm-users@gotm.net}. Information about updates, bug fixes, and
-new versions of GOTM are communicated via this list.
+please write an e-mail to {\tt gotm-devel@googlegroups.com}. All users 
+of GOTM, who signed up on the GOTM web page, will be on the users' mailing
+list, {\tt gotm-users@googlegroups.com}. Information about updates, 
+bug fixes, and new versions of GOTM are communicated via this list.
 
 \subsection{Acknowledgements}
 
