--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,18 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@ARTICLE{bakhoday-paskyabi_et_al_2012,
+  author   = {M. Bakhoday--Paskyabi and I. Fer and A. D. Jenkins},
+  title    = {Surface gravity wave effects on the upper ocean boundary layer: 
+              Modification of a one--dimensional vertical mixing model},
+  journal = CSR,
+  year    = {2012},
+  volume  = {38},
+  pages   = {63-78},
+  doi     = "doi:10.1016/j.csr.2012.03.002"
+}
+
+
 @ARTICLE{vandermolen_et_al_2012,
     author  = {Johan van der Molen and John N. Aldridge and Clare Coughlan and 
                E. R. Parker and D. Stephens and Piet Ruardij},
