added 2 Yakushev papers

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -40,6 +40,30 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@ARTICLE{yakushev_et_al_2011,
+  author  = {E. V. Yakushev and I. S. Kuznetsov and O. I. Podymov and 
+             H. Burchard and T. Neumann and F.  Pollehne},
+  title   = {Modeling of influence of oxygenated inflows on biogeochemical 
+             structure of the {G}otland {S}ea, central {B}altic {S}ea: 
+             changes in distribution of manganese}, 
+  journal = {Computers and Geosciences},
+  year    = {2011},
+  volume  = {37},
+  pages   = {398-409},
+}
+%  doi     = "doi:10.1016/j.csr.2012.03.002"
+
+@ARTICLE{yakushev_et_al_2009,
+  author  = {E. Yakushev and S. Pakhomova and K. Sorensen and J. Skei},
+  title   = {Importance of the different manganese species in the formation 
+             of water column redox zones: {O}bservations and modelling},
+  journal = {Marine Chemistry},
+  year    = {2009},
+  volume  = {117},
+  pages   = {59-70},
+}
+%  doi     = "doi:10.1016/j.csr.2012.03.002"
+
 @ARTICLE{bakhoday-paskyabi_et_al_2012,
   author   = {M. Bakhoday--Paskyabi and I. Fer and A. D. Jenkins},
   title    = {Surface gravity wave effects on the upper ocean boundary layer: 
