added dois for Yakushev

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -50,8 +50,8 @@
   year    = {2011},
   volume  = {37},
   pages   = {398-409},
+  doi     = "doi:10.1016/j.marchem.2009.09.007"
 }
-%  doi     = "doi:10.1016/j.csr.2012.03.002"
 
 @ARTICLE{yakushev_et_al_2009,
   author  = {E. Yakushev and S. Pakhomova and K. Sorensen and J. Skei},
@@ -61,8 +61,8 @@
   year    = {2009},
   volume  = {117},
   pages   = {59-70},
+  doi     = "doi:10.1016/j.cageo.2011.01.001"
 }
-%  doi     = "doi:10.1016/j.csr.2012.03.002"
 
 @ARTICLE{bakhoday-paskyabi_et_al_2012,
   author   = {M. Bakhoday--Paskyabi and I. Fer and A. D. Jenkins},
