added some IOW/HB articles

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -1,6 +1,4 @@
 %
-%$Id: gotm_pub.bib,v 1.15 2010-04-26 13:08:21 kb Exp $
-%
 
 %@String{OMOD = "Ocean Modelling"}
 %@String{APM = "App. Math. Modelling"}
@@ -39,6 +37,89 @@
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+@ARTICLE{burchard_et_al_2013,
+  author  = {H. Burchard and H.M. Schuttelaars and W.R. Geyer},
+  title   = {Residual sediment fluxes in weakly-to-periodically stratified
+             estuaries and tidal inlets},
+  journal = {Journal of Physical Oceanography},
+  year    = {2013},
+  volume  = {43},
+  pages   = {1841-1861},
+  doi     = {http://dx.doi.org/10.1175/JPO-D-12-0231.1},
+}
+
+@ARTICLE{karna_et_al_2012,
+  author  = {T. K\”arn\”a and V. Legat and E. Deleersnijder and H. Burchard},
+  title   = {Coupling of a discontinuous {G}alerkin finite element marine
+             %model with a finite difference turbulence closure model},
+  journal = {Ocean Modelling},
+  year    = {2012},
+  volume  = {47},
+  pages   = {55-64},
+  doi     = {http://dx.doi.org/10.1016/j.ocemod.2012.01.001},
+}
+
+@ARTICLE{schippmann_burchard_2011,
+  author  = {B. Schippmann and H. Burchard},
+  title   = {Rosenbrock methods in biogeochemical modelling - a comparison
+             to {R}unge-{K}utta methods and modified {P}atankar schemes},
+  journal = {Ocean Modelling},
+  year    = {2011},
+  volume  = {37},
+  pages   = {112-121},
+  doi     = {http://dx.doi.org/10.1016/j.ocemod.2011.01.007},
+}
+
+@ARTICLE{umlauf_burchard_2011,
+  author  = {L. Umlauf and H. Burchard},
+  title   = {Diapycnal transport and mixing efficiency in stratified boundary
+           layers near sloping topography},
+  journal = {Journal of Physical Oceanography},
+  year    = {2011},
+  volume  = {41},
+  pages   = {329–345},
+  doi     = {http://dx.doi.org/10.1175/2010JPO4438.1},
+}
+
+@ARTICLE{burchard_hetland_2010,
+  author  = {H. Burchard and R.D. Hetland},
+  title   = {Quantifying the contributions of tidal straining and
+             gravitational circulation to residual circulation in periodically
+             stratified tidal estuaries},
+  journal = {Journal of Physical Oceanography},
+  year    = {2010},
+  volume  = {40},
+  pages   = {1243-1262},
+  doi     = {http://dx.doi.org/10.1175/2010JPO4270.1},
+}
+
+@ARTICLE{reissmann_et_al_2009,
+  author  = {J. Reissmann and H. Burchard and R. Feistel and E. Hagen and
+             H.U. Lass and V. Mohrholz and G. Nausch and L. Umlauf and 
+             G. Wieczorek},
+  title   = {State-of-the-art review on vertical mixing in the {B}altic
+             {S}ea and consequences for eutrophication},
+  journal = {Progress in Oceanography},
+  year    = {2009},
+  volume  = {82},
+  pages   = {47-80},
+  doi     = {http://dx.doi.org/10.1016/j.pocean.2007.10.004},
+}
+
+@ARTICLE{burchard_et_al_2008,
+  author  = {H. Burchard and P.D. Craig and J.R. Gemmrich and H. van Haren
+             and P.-P. Mathieu and H.E.M. Meier and W.A.M. Nimmo Smith and 
+             H. Prandke and T.P. Rippeth and E.D. Skyllingstad and 
+             W.D. Smyth and D.J.S. Welsh and H.W. Wijesekera},
+  title   = {Observational and numerical modeling methods for quantifying
+             coastal ocean turbulence and mixing},
+  journal = {Progress in Oceanography},
+  year    = {2008},
+  volume  = {76},
+  pages   = {399-442},
+  doi     = {http://dx.doi.org/10.1016/j.pocean.2007.09.005},
+}
 
 @ARTICLE{yakushev_et_al_2011,
   author  = {E. V. Yakushev and I. S. Kuznetsov and O. I. Podymov and 
