added 2 GEOHAB entries

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -38,6 +38,31 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@BOOK{GEOHAB_2013,
+  title  = {Global Ecology and Oceanography of Harmful Algal Blooms, 
+            GEOHAB Core Research Project: HABs in Stratified Environments},
+  editor = {M.A. McManus and E. Berdalet and J. Ryan and H. Yamazaki and 
+            J.S. Jaffe and O.N. Ross and H. Burchard and I. Jenkinson 
+            and F.P. Chavez)},
+  year   = {2013},
+  edition = {ISBN: 1538 182X},
+  institution = {IOC and SCOR, Paris and Newark, Delaware, USA., 62 p.},
+}
+%  url = {www.scor-int.org}
+
+@ARTICLE{berdalet_et_al_2013,
+  author  = {E. Berdalet and M. A. McManus and O. N. Ross and H. Burchard and
+            F. Chavez and J. S. Jaffe and I. Jenkinson and R. Kudela and I. Lips
+            and A. Lucas and D. Rivas and M. C. Ruiz de la Torre and J. Ryan and
+            J.M. Sullivan and H. Yamazaki},
+  title   = {Understanding Harmful Algae in Stratified Systems: Review of 
+            Progress and Identification of Gaps in Knowledge},
+  journal = {Deep-Sea Research II},
+  year    = {2013},
+  volume  = {Published online},
+  doi     = {10.1016/j.dsr2.2013.09.042},
+}
+
 @ARTICLE{burchard_et_al_2013,
   author  = {H. Burchard and H.M. Schuttelaars and W.R. Geyer},
   title   = {Residual sediment fluxes in weakly-to-periodically stratified
