added Nauw et Vegt

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -38,6 +38,17 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@INPROCEEDINGS{nauw_et_vegt_2012,
+  author    = {J.J. Nauw and M. van der Vegt},
+  title     = {Hydrodynamics of the Rhine ROFI near IJmuiden},
+  booktitle = {NCK-days 2012 : Crossing borders in coastal research : 
+               jubilee conference proceedings.},
+  year      = {2012},
+  editor    = {Kranenburg, W.M. and Horstman, E.M. and Wijnberg, K.M},
+  pages     = {167--172},
+  url       = {http://proceedings.utwente.nl/191/}
+}
+
 @BOOK{GEOHAB_2013,
   title  = {Global Ecology and Oceanography of Harmful Algal Blooms, 
             GEOHAB Core Research Project: HABs in Stratified Environments},
