added 4 Steiner publications

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -38,6 +38,46 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@Article{steiner_et_al_2007,
+  author =       {Nadja Steiner and Svein Vagle and Ken Denman and Craig McNeil},
+  title =        {Oxygen and Nitrogen Cycling in the {Notheast} {Pacific} - Simulations and Observations at Station {Papa} in 2003/2004},
+  journal =      {Journal of Marine Research},
+  year =         2007,
+  volume =       65,
+  number =        3,
+  pages =        {441-469}
+}
+
+@Article{steiner_and_denman_2008,
+  author =       {Nadja Steiner and Ken Denman},
+  title =        {Parameter sensitivities in a 1-D model for DMS and sulphur cycling in the upper ocean},
+  journal =      {Deep Sea Research {I}},
+  year =         2008,
+  volume =       55,
+  pages =        {847-865}
+}
+
+@Article{vagle_et_al_2006,
+  author =       {Svein Vagle and Craig McNeil and Nadja Steiner},
+  title =        {Upper Ocean Bubble Measurements From the {NE Pacific} and Estimates of Their Role in Air-Sea Gas Transfer of nitrogen},
+  journal =      {Journal of Geophysical Research},
+  year =         2006,
+  volume =       115,
+  number =       {C12054,},
+  doi =         {doi:10.1029/2009JC005990},
+}
+
+@Article{steiner_et_al_2011,
+  author =       {Nadja Steiner and Marie Robert and Michael Arychuk and Maurice Levasseur and Anissa Merzouk and Angelica Pena and Wendy Richardson and Philippe Tortell},
+  title =        {Evaluating DMS measurements and model results in the Northeast subarctic Pacific from 1996-2010 },
+  journal =      {Biogeochemistry},
+  year =         2011,
+  volume =       110,
+  number =       {1-3},
+  pages =        {269-285},
+  doi =         {doi:10.1007/s10533-011-9669-9},
+}
+
 @INPROCEEDINGS{nauw_et_vegt_2012,
   author    = {J.J. Nauw and M. van der Vegt},
   title     = {Hydrodynamics of the Rhine ROFI near IJmuiden},
