--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -32,11 +32,23 @@
 @STRING{BGS = "Biogeosciences"}
 @STRING{ECSS = "Estuarine, Coastal and Shelf Science"}
 @String{GRL = "Geophysical Research Letters"}
+@String{EMS = "Environmental Modelling and Software"}
 
 
 @String{acc = "Accepted for publication"}
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
+
+@Article{bruggeman_and_bolding_2014,
+  author =       {Jorn Bruggeman and Karsten Bolding},
+  title =        {A general frmwork for auqatic biogeochemical models},
+  journal =      EMS,
+  year =         2014,
+  doi =         {http://dx.doi.org/10.1016/j.envsoft.2014.04.002}
+}
+%  volume =       65,
+%  number =        3,
+%  pages =        {441-469}
 
 @Article{steiner_et_al_2007,
   author =       {Nadja Steiner and Svein Vagle and Ken Denman and Craig McNeil},
