fixed typos in bruggeman_and_bolding_2014

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -41,7 +41,7 @@
 
 @Article{bruggeman_and_bolding_2014,
   author =       {Jorn Bruggeman and Karsten Bolding},
-  title =        {A general frmwork for auqatic biogeochemical models},
+  title =        {A general framework for aquatic biogeochemical models},
   journal =      EMS,
   year =         2014,
   doi =         {http://dx.doi.org/10.1016/j.envsoft.2014.04.002}
