pubs: added Moghimi et al. (2016)

--- a/doc/gotm_pub.bib
+++ b/doc/gotm_pub.bib
@@ -39,6 +39,14 @@
 @String{sub = "Submitted"}
 @String{inp = "In Press"}
 
+@Article{moghimi_et_al_2016,
+  author =       {Saeed Moghimi and Jim Thomson and Tuba \"Ozkan-Haller and Lars Umlauf and Seth Zippel},
+  title =        {On the modeling of wave-enhanced turbulence nearshore},
+  journal =      OM,
+  year =         2016,
+  doi =         {http://dx.doi.org/10.1016/j.ocemod.2015.11.004}
+}
+
 @Article{bruggeman_and_bolding_2014,
   author =       {Jorn Bruggeman and Karsten Bolding},
   title =        {A general framework for aquatic biogeochemical models},
