--- a/doc/gotm.bib
+++ b/doc/gotm.bib
@@ -1791,6 +1791,16 @@ des Unterwasser-Strahlungsfeldes",
    note     = {},
 }
 
+@article{Howarth_etal_2002,
+  author = {M. J. Howarth and J. H. Simpson and J. S\"undermann and H. van Haren},
+  title = {Processes of vertical exchange in shelf seas ({PROVESS})},
+  journal = {J. Sea Res.},
+  volume = {47},
+  pages = {199-208},
+  year = {2002},
+}
+
+
 @article(Hussain70,
   author = "K.~M.~F. Hussain and W.~C. Reynolds",
   title = "The mechanics of an organized wave in turbulent shear flow",
